# mtk-gpu-oc

./: .gitignore  LICENSE  README.md  gpufreq-oc.toml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: legacy-script-analysis.md  mt6789-gpufreq-analysis.md  patch-model.md
src/mtk_gpu_oc/: __init__.py  __main__.py  analysis.py  cli.py  compare.py  config.py  elf.py  gpufreq.py  opp.py  patch.py  profiles.py  verify.py  voltage.py
tests/: test_elf.py  test_opp.py  test_opp_invariants.py  test_patch.py  test_voltage.py
